tests/baselines/reference/parserClassDeclaration18.errors.txt
tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration18.ts(4,25): error TS1111: A constructor implementation cannot be declared in an ambient context.


==== tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration18.ts (1 errors) ====
    declare class FooBase {
        constructor(s: string);
        constructor(n: number);
        constructor(x: any) {
                            ~
!!! error TS1111: A constructor implementation cannot be declared in an ambient context.
        }
        bar1():void;
    }